<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.news.ui.bbc.HomeFragment"
        android:label="@string/BBC"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.news.ui.gallery.GalleryFragment"
        android:label="@string/Aljazeera"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.news.ui.slideshow.SlideshowFragment"
        android:label="@string/CNN"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/ntv"
        android:name="com.example.news.Fragment.ntvFragment"
        android:label="@string/NTV"
        tools:layout="@layout/fragment_ntv" />
    <fragment
        android:id="@+id/tv9"
        android:name="com.example.news.Fragment.tv9Fragment"
        android:label="@string/TV9"
        tools:layout="@layout/fragment_tv9" />
</navigation>